devops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: exchange
  namespace: default
spec:
  selector:
    app: exchange
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
