devops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exchange
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: exchange.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exchange
                port:
                  number: 80
